# cookie-factory

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: cookie-factory.yml
.reuse/: dep5
benches/: combinators-json.rs  http.rs  json-functions.rs  json-macros.rs  json.rs  rewrite.rs
examples/: async_http.rs  cursor.rs  http.rs  json.rs  rewrite.rs  str.rs
src/: async_bufwriter.rs  bytes.rs  combinator.rs  combinators.rs  functions.rs  gen.rs  http.rs  internal.rs  io_compat.rs  lib.rs  multi.rs  rewrite.rs  sequence.rs
src/cftrait/: cfimpl.rs  mod.rs
src/combinator/: mod.rs
src/combinators/: binary.rs  mod.rs  text.rs
tests/: combinators-json.rs  http.rs  json2.rs  pouet.rs
tests/http/: mod.rs
tests/json/: mod.rs
