[package]
name = "cookie-factory"
version = "0.3.0-beta4"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>", "Pierre Chifflier <chifflier@wzdftpd.net>"]
license = "MIT"
repository = "https://github.com/rust-bakery/cookie-factory"
readme = "README.md"
documentation = "http://docs.rs/cookie-factory"
description = "nom inspired serialization library"
categories = ["encoding"]
keywords = ["encoding", "serialization", "nom"]
edition = "2018"

include = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  ".gitignore",
  "src/*.rs",
  "src/combinator/*.rs",
  "example/*.rs"
]

[features]
default = ["std"]
std = []

[dev-dependencies]
maplit = "^1.0"

[profile.bench]
debug = true
lto = true
codegen-units = 1

[[example]]
name = "cursor"
required-features = ["std"]

[[example]]
name = "json"

[[example]]
name = "http"
required-features = ["std"]

[[test]]
name = "http"
required-features = ["std"]

[[test]]
name = "pouet"

[[test]]
name = "combinators-json"

[badges]
travis-ci = { repository = "Geal/cookie-factory" }
maintenance = { status = "actively-developed" }
